testing/gateway-rate-limit/01-install-ingress-gateway-chart.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
  labels:
    name: httpbin
